cmake_minimum_required(VERSION 3.24)
project(CodeHelp2_0)

set(CMAKE_CXX_STANDARD 23)

add_executable(CodeHelp2_0 array/main.cpp)
add_executable(CodeHelp2_0_1 patterns/main.cpp)
add_executable(CodeHelp2_0_2 pointers/main.cpp)
add_executable(CodeHelp2_0_3 recursion/main.cpp)
add_executable(CodeHelp2_0_4 search&sorting/main.cpp)
add_executable(Codehelp2_0_5 searching/main.cpp)
add_executable(CodeHelp2_0_6 STL/main_stl.cpp)
add_executable(CodeHelp2_0_7 OOPs/class1/main.cpp)
add_executable(CodeHelp2_0_8 OOPs/inheritance/main.cpp )
add_executable(CodeHelp2_0_9 OOPs/polymorphism/main.cpp)
add_executable(CodeHelp2_0_10 OOPs/polymorphism/method_overriding/main.cpp)